login batch student working and views changed added

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Spring-MVC-LoginForm</name>
+	<name>Training</name>
 	<comment></comment>
 	<projects>
 	</projects>
