--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.spring</groupId>
-	<artifactId>Spring-MVC-LoginForm</artifactId>
-	<name>Spring-MVC-LoginForm</name>
+	<name>Training</name>
 	<packaging>war</packaging>
 	<version>1.0.0-BUILD-SNAPSHOT</version>
 	<properties>
@@ -208,4 +207,5 @@
 			</plugin>
 		</plugins>
 	</build>
+	<artifactId>Training</artifactId>
 </project>
